Task: Fix back button mobile nav

--- a/src/ContentBox.scss
+++ b/src/ContentBox.scss
@@ -12,7 +12,7 @@
   overflow: hidden; 
   transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   height: 540px;
-  width: 80vw;
+  width: 90vw;
   transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
 
   @media screen and (min-width: 700px) {
