--- a/src/IntroductionText.css
+++ b/src/IntroductionText.css
@@ -3,7 +3,7 @@ h1 {
   font-family: "new-kansas", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 64px;
+  font-size: 56px;
   margin: 0; 
 }
 
