--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -20,15 +20,14 @@ $transition-time: 1.5s;
   margin-top: -2px;
   box-sizing: border-box; 
   width: 100%; 
-  border-style: solid;
-  border-width: $menu-item-border-width;
+  // border-style: solid;
+  // border-width: $menu-item-border-width;
   display: flex;
   align-items: center;
   justify-content: center; 
   font-family: "area-normal", sans-serif;
   font-weight: 600;
   font-style: normal;
-  font-size: 16px;
   //height: $menu-item-height;
   transition: border-width 3s ease, margin-top 1s ease, margin-bottom 1s ease;
   z-index: 4;
@@ -37,6 +36,10 @@ $transition-time: 1.5s;
   }
 }
 @media (min-width: 700px) {
+  .menu-item {
+    border-style: solid;
+    border-width: $menu-item-border-width;
+  }
   .menu-item-1, .menu-item-2, .menu-item-3 {
     transition: transform $transition-time ease, background-color 0.5s ease, box-shadow 0.5s ease;
 
@@ -91,6 +94,5 @@ $transition-time: 1.5s;
 }
 
 
-// ####### MOBILE ######### 
 
 
