--- a/src/MenuContent.scss
+++ b/src/MenuContent.scss
@@ -2,7 +2,7 @@
   width: 100vw; 
   position: absolute; 
   display: flex;
-  padding-top: 100px;
+  padding-top: 250px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -60,4 +60,3 @@
   width: 60vw;
   max-width: 800px;
 }
-
